// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInMemoryTable behavior pagination 1`] = `
<EuiInMemoryTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  executeQueryOptions={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
      Object {
        "id": "4",
        "name": "name4",
      },
    ]
  }
  pagination={
    Object {
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
    }
  }
  responsive={true}
  sorting={false}
>
  <EuiBasicTable
    aria-label="aria-label"
    className="testClass1 testClass2"
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
          "sortable": false,
        },
      ]
    }
    data-test-subj="test subject string"
    items={
      Array [
        Object {
          "id": "3",
          "name": "name3",
        },
        Object {
          "id": "4",
          "name": "name4",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    pagination={
      Object {
        "hidePerPageOptions": undefined,
        "pageIndex": 1,
        "pageSize": 2,
        "pageSizeOptions": Array [
          2,
          4,
          6,
        ],
        "totalItemCount": 4,
      }
    }
    responsive={true}
  >
    <div
      aria-label="aria-label"
      className="euiBasicTable testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div>
        <EuiTableHeaderMobile>
          <div
            className="euiTableHeaderMobile"
          >
            <EuiFlexGroup
              alignItems="baseline"
              justifyContent="spaceBetween"
              responsive={false}
            >
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
              >
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  />
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
          </div>
        </EuiTableHeaderMobile>
        <EuiTable
          responsive={true}
        >
          <table
            className="euiTable euiTable--responsive"
          >
            <EuiScreenReaderOnly>
              <caption
                aria-live="polite"
                aria-relevant="text"
                className="euiScreenReaderOnly"
                role="status"
              >
                <EuiI18n
                  default="Below is a table of {itemCount} items."
                  token="euiBasicTable.tableDescription"
                  values={
                    Object {
                      "itemCount": 2,
                    }
                  }
                >
                  Below is a table of 2 items.
                </EuiI18n>
              </caption>
            </EuiScreenReaderOnly>
            <EuiTableHeader>
              <thead>
                <tr>
                  <EuiTableHeaderCell
                    align="left"
                    data-test-subj="tableHeaderCell_name_0"
                    key="_data_h_name_0"
                    mobileOptions={
                      Object {
                        "show": true,
                      }
                    }
                    scope="col"
                  >
                    <th
                      className="euiTableHeaderCell"
                      data-test-subj="tableHeaderCell_name_0"
                      role="columnheader"
                      scope="col"
                    >
                      <div
                        className="euiTableCellContent"
                      >
                        <span
                          className="euiTableCellContent__text"
                        >
                          Name
                        </span>
                      </div>
                    </th>
                  </EuiTableHeaderCell>
                </tr>
              </thead>
            </EuiTableHeader>
            <EuiTableBody>
              <tbody>
                <EuiTableRow
                  isSelected={false}
                >
                  <tr
                    className="euiTableRow"
                  >
                    <EuiTableRowCell
                      align="left"
                      key="_data_column_name_2_0"
                      mobileOptions={
                        Object {
                          "header": "Name",
                          "render": undefined,
                        }
                      }
                      textOnly={true}
                    >
                      <td
                        className="euiTableRowCell"
                      >
                        <div
                          className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                        >
                          Name
                        </div>
                        <div
                          className="euiTableCellContent"
                        >
                          <span
                            className="euiTableCellContent__text"
                          >
                            name3
                          </span>
                        </div>
                      </td>
                    </EuiTableRowCell>
                  </tr>
                </EuiTableRow>
                <EuiTableRow
                  isSelected={false}
                >
                  <tr
                    className="euiTableRow"
                  >
                    <EuiTableRowCell
                      align="left"
                      key="_data_column_name_3_0"
                      mobileOptions={
                        Object {
                          "header": "Name",
                          "render": undefined,
                        }
                      }
                      textOnly={true}
                    >
                      <td
                        className="euiTableRowCell"
                      >
                        <div
                          className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                        >
                          Name
                        </div>
                        <div
                          className="euiTableCellContent"
                        >
                          <span
                            className="euiTableCellContent__text"
                          >
                            name4
                          </span>
                        </div>
                      </td>
                    </EuiTableRowCell>
                  </tr>
                </EuiTableRow>
              </tbody>
            </EuiTableBody>
          </table>
        </EuiTable>
      </div>
      <PaginationBar
        onPageChange={[Function]}
        onPageSizeChange={[Function]}
        pagination={
          Object {
            "hidePerPageOptions": undefined,
            "pageIndex": 1,
            "pageSize": 2,
            "pageSizeOptions": Array [
              2,
              4,
              6,
            ],
            "totalItemCount": 4,
          }
        }
      >
        <div>
          <EuiSpacer
            size="m"
          >
            <div
              className="euiSpacer euiSpacer--m"
            />
          </EuiSpacer>
          <EuiTablePagination
            activePage={1}
            hidePerPageOptions={false}
            itemsPerPage={2}
            itemsPerPageOptions={
              Array [
                2,
                4,
                6,
              ]
            }
            onChangeItemsPerPage={[Function]}
            onChangePage={[Function]}
            pageCount={2}
          >
            <EuiFlexGroup
              alignItems="center"
              justifyContent="spaceBetween"
              responsive={false}
            >
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
              >
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <EuiPopover
                      anchorPosition="upRight"
                      button={
                        <EuiButtonEmpty
                          color="text"
                          iconSide="right"
                          iconType="arrowDown"
                          onClick={[Function]}
                          size="xs"
                          type="button"
                        >
                          <EuiI18n
                            default="Rows per page"
                            token="euiTablePagination.rowsPerPage"
                          />
                          : 
                          2
                        </EuiButtonEmpty>
                      }
                      closePopover={[Function]}
                      hasArrow={true}
                      id="customizablePagination"
                      isOpen={false}
                      ownFocus={false}
                      panelPaddingSize="none"
                      withTitle={true}
                    >
                      <EuiOutsideClickDetector
                        isDisabled={true}
                        onOutsideClick={[Function]}
                      >
                        <div
                          className="euiPopover euiPopover--anchorUpRight euiPopover--withTitle"
                          id="customizablePagination"
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                        >
                          <div
                            className="euiPopover__anchor"
                          >
                            <EuiButtonEmpty
                              color="text"
                              iconSide="right"
                              iconType="arrowDown"
                              onClick={[Function]}
                              size="xs"
                              type="button"
                            >
                              <button
                                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiButtonEmpty--iconRight"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="euiButtonEmpty__content"
                                >
                                  <EuiIcon
                                    aria-hidden="true"
                                    className="euiButtonEmpty__icon"
                                    size="m"
                                    type="arrowDown"
                                  >
                                    <arrowDown
                                      aria-hidden="true"
                                      className="euiIcon euiIcon--medium euiButtonEmpty__icon"
                                      focusable="false"
                                      height="16"
                                      style={null}
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                      xmlnsXlink="http://www.w3.org/1999/xlink"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiButtonEmpty__icon"
                                        focusable="false"
                                        height="16"
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                        xmlnsXlink="http://www.w3.org/1999/xlink"
                                      >
                                        <defs>
                                          <path
                                            d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                                            id="arrow_down-a"
                                          />
                                        </defs>
                                        <use
                                          fillRule="nonzero"
                                          xlinkHref="#arrow_down-a"
                                        />
                                      </svg>
                                    </arrowDown>
                                  </EuiIcon>
                                  <span
                                    className="euiButtonEmpty__text"
                                  >
                                    <EuiI18n
                                      default="Rows per page"
                                      token="euiTablePagination.rowsPerPage"
                                    >
                                      Rows per page
                                    </EuiI18n>
                                    : 
                                    2
                                  </span>
                                </span>
                              </button>
                            </EuiButtonEmpty>
                          </div>
                        </div>
                      </EuiOutsideClickDetector>
                    </EuiPopover>
                  </div>
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <EuiPagination
                      activePage={1}
                      onPageClick={[Function]}
                      pageCount={2}
                    >
                      <div
                        className="euiPagination"
                        role="group"
                      >
                        <EuiI18n
                          default="Previous page"
                          token="euiPagination.previousPage"
                        >
                          <EuiButtonIcon
                            aria-label="Previous page"
                            color="text"
                            data-test-subj="pagination-button-previous"
                            disabled={false}
                            iconSize="m"
                            iconType="arrowLeft"
                            onClick={[Function]}
                            type="button"
                          >
                            <button
                              aria-label="Previous page"
                              className="euiButtonIcon euiButtonIcon--text"
                              data-test-subj="pagination-button-previous"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <EuiIcon
                                aria-hidden="true"
                                className="euiButtonIcon__icon"
                                size="m"
                                type="arrowLeft"
                              >
                                <arrowLeft
                                  aria-hidden="true"
                                  className="euiIcon euiIcon--medium euiButtonIcon__icon"
                                  focusable="false"
                                  height="16"
                                  style={null}
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                  xmlnsXlink="http://www.w3.org/1999/xlink"
                                >
                                  <svg
                                    aria-hidden="true"
                                    className="euiIcon euiIcon--medium euiButtonIcon__icon"
                                    focusable="false"
                                    height="16"
                                    style={null}
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                    xmlnsXlink="http://www.w3.org/1999/xlink"
                                  >
                                    <defs>
                                      <path
                                        d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                                        id="arrow_left-a"
                                      />
                                    </defs>
                                    <use
                                      fillRule="nonzero"
                                      transform="rotate(90 8 8)"
                                      xlinkHref="#arrow_left-a"
                                    />
                                  </svg>
                                </arrowLeft>
                              </EuiIcon>
                            </button>
                          </EuiButtonIcon>
                        </EuiI18n>
                        <EuiI18n
                          default="Page {page} of {total}"
                          key="0"
                          token="euiPagination.pageOfTotal"
                          values={
                            Object {
                              "page": 1,
                              "total": 2,
                            }
                          }
                        >
                          <EuiPaginationButton
                            aria-label="Page 1 of 2"
                            data-test-subj="pagination-button-0"
                            hideOnMobile={true}
                            isActive={false}
                            onClick={[Function]}
                          >
                            <EuiButtonEmpty
                              aria-label="Page 1 of 2"
                              className="euiPaginationButton euiPaginationButton--hideOnMobile"
                              color="text"
                              data-test-subj="pagination-button-0"
                              iconSide="left"
                              onClick={[Function]}
                              size="xs"
                              type="button"
                            >
                              <button
                                aria-label="Page 1 of 2"
                                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
                                data-test-subj="pagination-button-0"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="euiButtonEmpty__content"
                                >
                                  <span
                                    className="euiButtonEmpty__text"
                                  >
                                    1
                                  </span>
                                </span>
                              </button>
                            </EuiButtonEmpty>
                          </EuiPaginationButton>
                        </EuiI18n>
                        <EuiI18n
                          default="Page {page} of {total}"
                          key="1"
                          token="euiPagination.pageOfTotal"
                          values={
                            Object {
                              "page": 2,
                              "total": 2,
                            }
                          }
                        >
                          <EuiPaginationButton
                            aria-label="Page 2 of 2"
                            data-test-subj="pagination-button-1"
                            hideOnMobile={true}
                            isActive={true}
                            onClick={[Function]}
                          >
                            <EuiButtonEmpty
                              aria-label="Page 2 of 2"
                              className="euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                              color="text"
                              data-test-subj="pagination-button-1"
                              iconSide="left"
                              onClick={[Function]}
                              size="xs"
                              type="button"
                            >
                              <button
                                aria-label="Page 2 of 2"
                                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                                data-test-subj="pagination-button-1"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="euiButtonEmpty__content"
                                >
                                  <span
                                    className="euiButtonEmpty__text"
                                  >
                                    2
                                  </span>
                                </span>
                              </button>
                            </EuiButtonEmpty>
                          </EuiPaginationButton>
                        </EuiI18n>
                        <EuiI18n
                          default="Next page"
                          token="euiPagination.nextPage"
                        >
                          <EuiButtonIcon
                            aria-label="Next page"
                            color="text"
                            data-test-subj="pagination-button-next"
                            disabled={true}
                            iconSize="m"
                            iconType="arrowRight"
                            onClick={[Function]}
                            type="button"
                          >
                            <button
                              aria-label="Next page"
                              className="euiButtonIcon euiButtonIcon--text"
                              data-test-subj="pagination-button-next"
                              disabled={true}
                              onClick={[Function]}
                              type="button"
                            >
                              <EuiIcon
                                aria-hidden="true"
                                className="euiButtonIcon__icon"
                                size="m"
                                type="arrowRight"
                              >
                                <arrowRight
                                  aria-hidden="true"
                                  className="euiIcon euiIcon--medium euiButtonIcon__icon"
                                  focusable="false"
                                  height="16"
                                  style={null}
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                  xmlnsXlink="http://www.w3.org/1999/xlink"
                                >
                                  <svg
                                    aria-hidden="true"
                                    className="euiIcon euiIcon--medium euiButtonIcon__icon"
                                    focusable="false"
                                    height="16"
                                    style={null}
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                    xmlnsXlink="http://www.w3.org/1999/xlink"
                                  >
                                    <defs>
                                      <path
                                        d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                                        id="arrow_right-a"
                                      />
                                    </defs>
                                    <use
                                      fillRule="nonzero"
                                      transform="matrix(0 1 1 0 0 0)"
                                      xlinkHref="#arrow_right-a"
                                    />
                                  </svg>
                                </arrowRight>
                              </EuiIcon>
                            </button>
                          </EuiButtonIcon>
                        </EuiI18n>
                      </div>
                    </EuiPagination>
                  </div>
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
          </EuiTablePagination>
        </div>
      </PaginationBar>
    </div>
  </EuiBasicTable>
</EuiInMemoryTable>
`;

exports[`EuiInMemoryTable empty array 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  items={Array []}
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with executeQueryOptions 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  items={Array []}
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with initial sorting 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "3",
        "name": "name3",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "1",
        "name": "name1",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
  sorting={
    Object {
      "allowNeutralSort": true,
      "sort": Object {
        "direction": "desc",
        "field": "name",
      },
    }
  }
/>
`;

exports[`EuiInMemoryTable with items 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with items and expanded item 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  itemIdToExpandedRowMap={
    Object {
      "1": <div>
        expanded row content
      </div>,
    }
  }
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with items and message - expecting to show the items 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="show me!"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with message 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  items={Array []}
  noItemsMessage="where my items at?"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with message and loading 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  items={Array []}
  loading={true}
  noItemsMessage="Loading items...."
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with pagination 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 2,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with pagination and default page size 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 4,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with pagination and selection 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "onSelectionChanged": [Function],
    }
  }
/>
`;

exports[`EuiInMemoryTable with pagination, default page size and error 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  error="ouch!"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 4,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 1,
    }
  }
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with pagination, hiding the per page options 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": true,
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with pagination, selection and sorting 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "onSelectionChanged": [Function],
    }
  }
  sorting={
    Object {
      "allowNeutralSort": true,
      "sort": undefined,
    }
  }
/>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting  and simple search 1`] = `
<div>
  <EuiSearchBar
    onChange={[Function]}
  />
  <EuiSpacer
    size="l"
  />
  <EuiBasicTable
    aria-label="aria-label"
    className="testClass1 testClass2"
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
          "sortable": true,
        },
        Object {
          "actions": Array [
            Object {
              "description": "edit",
              "name": "Edit",
              "onClick": [Function],
              "type": "button",
            },
          ],
          "name": "Actions",
          "sortable": false,
        },
      ]
    }
    data-test-subj="test subject string"
    itemId="id"
    items={
      Array [
        Object {
          "id": "1",
          "name": "name1",
        },
        Object {
          "id": "2",
          "name": "name2",
        },
        Object {
          "id": "3",
          "name": "name3",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    pagination={
      Object {
        "hidePerPageOptions": undefined,
        "pageIndex": 0,
        "pageSize": 10,
        "pageSizeOptions": Array [
          10,
          25,
          50,
        ],
        "totalItemCount": 3,
      }
    }
    responsive={true}
    selection={
      Object {
        "onSelectionChanged": [Function],
      }
    }
    sorting={
      Object {
        "allowNeutralSort": true,
        "sort": undefined,
      }
    }
  />
</div>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting and a single record action 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
      Object {
        "actions": Array [
          Object {
            "description": "edit",
            "name": "Edit",
            "onClick": [Function],
            "type": "button",
          },
        ],
        "name": "Actions",
        "sortable": false,
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "onSelectionChanged": [Function],
    }
  }
  sorting={
    Object {
      "allowNeutralSort": true,
      "sort": undefined,
    }
  }
/>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting and column renderer 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 2,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "onSelectionChanged": [Function],
    }
  }
  sorting={
    Object {
      "allowNeutralSort": true,
      "sort": undefined,
    }
  }
/>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting and configured search 1`] = `
<div>
  <EuiSearchBar
    box={
      Object {
        "aria-label": "aria-label",
        "className": "testClass1 testClass2",
        "data-test-subj": "test subject string",
        "incremental": true,
      }
    }
    defaultQuery="name:name1"
    filters={
      Array [
        Object {
          "field": "name",
          "name": "Name1",
          "negatedName": "Not Name1",
          "type": "field_value_toggle",
          "value": "name1",
        },
      ]
    }
    onChange={[Function]}
  />
  <EuiSpacer
    size="l"
  />
  <EuiBasicTable
    aria-label="aria-label"
    className="testClass1 testClass2"
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
          "sortable": true,
        },
        Object {
          "actions": Array [
            Object {
              "description": "edit",
              "name": "Edit",
              "onClick": [Function],
              "type": "button",
            },
          ],
          "name": "Actions",
          "sortable": false,
        },
      ]
    }
    data-test-subj="test subject string"
    itemId="id"
    items={
      Array [
        Object {
          "id": "1",
          "name": "name1",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    pagination={
      Object {
        "hidePerPageOptions": undefined,
        "pageIndex": 0,
        "pageSize": 10,
        "pageSizeOptions": Array [
          10,
          25,
          50,
        ],
        "totalItemCount": 1,
      }
    }
    responsive={true}
    selection={
      Object {
        "onSelectionChanged": [Function],
      }
    }
    sorting={
      Object {
        "allowNeutralSort": true,
        "sort": undefined,
      }
    }
  />
</div>
`;

exports[`EuiInMemoryTable with sorting 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
  sorting={
    Object {
      "allowNeutralSort": true,
      "sort": undefined,
    }
  }
/>
`;
